--- a/.github/workflows/rollback.yaml
+++ b/.github/workflows/rollback.yaml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   createPullRequest:
-    runs-on: [self-hosted]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
