--- a/.github/workflows/rollback.yaml
+++ b/.github/workflows/rollback.yaml
@@ -3,12 +3,15 @@ name: Manual rollback Action
 on:
   workflow_dispatch:
     inputs:
-      releaseActualVersion:
-        description: 'Actual release tag version'
-        required: true
       releaseLatestVersion:
         description: 'Latest release tag version'
         required: true
+      environment:
+        type: choice
+        description: environment
+        options:
+          - staging
+          - production
 
 jobs:
   createPullRequest:
@@ -22,11 +25,11 @@ jobs:
           git config user.email "${{ secrets.GIT_EMAIL }}"
           git config user.password "${{ secrets.GIT_TOKEN }}"
           git checkout -b "ci-${{ github.run_id }}"   
-          sed -i '2s/  tag: ${{ github.event.inputs.releaseActualVersion }}/  tag: ${{ github.event.inputs.releaseLatestVersion }}/' src/main/kotlin/com/example/file.yaml
-          git add -A && git commit -m '[production] Change image to version ${{ github.event.inputs.releaseLatestVersion }}'
+          sed -i -re '2s/  tag: [0-9]+\.[0-9]+\.[0-9]+/  tag: ${{ github.event.inputs.releaseLatestVersion }}/' src/main/kotlin/com/example/${{ github.event.inputs.environment }}/file.yaml
+          git add -A && git commit -m '[${{ github.event.inputs.environment }}] Change image to version ${{ github.event.inputs.releaseLatestVersion }}'
           git push --set-upstream origin "ci-${{ github.run_id }}"
 
       - name: create pull request
-        run: gh pr create -B main -H ci-${{ github.run_id }} --title  "[production] Change image to version ${{ github.event.inputs.releaseLatestVersion }}"  --body 'Change image version to version ${{ github.event.inputs.releaseLatestVersion }}'
+        run: gh pr create -B main -H ci-${{ github.run_id }} --title  "[${{ github.event.inputs.environment }}] Change image to version ${{ github.event.inputs.releaseLatestVersion }}"  --body 'Change image version to version ${{ github.event.inputs.releaseLatestVersion }}'
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
