--- a/.github/workflows/rollback.yaml
+++ b/.github/workflows/rollback.yaml
@@ -14,6 +14,16 @@ on:
           - production
 
 jobs:
+  validateVersion:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: validate
+        run: |
+          ACTUAL_VERSION=$(grep -o '[ˆ1-9]\+' src/main/kotlin/com/example/${{ github.event.inputs.environment }}/file.yaml)
+          if [ $ACTUAL_VERSION < $ACTUAL_VERSION - 1 ]; then exit 1
+
   createPullRequest:
     runs-on: ubuntu-latest
     steps:
