--- a/.github/workflows/rollback.yaml
+++ b/.github/workflows/rollback.yaml
@@ -14,8 +14,22 @@ on:
           - production
 
 jobs:
+  validateVersion:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Get version
+        run: |
+          echo "ACTUAL_VERSION=$(grep -o '[ˆ1-9]\+' src/main/kotlin/com/example/${{ github.event.inputs.environment }}/file.yaml)" >> $GITHUB_ENV
+
+      - name: Validate
+        run: echo $ACTUAL_VERSION
+
   createPullRequest:
     runs-on: ubuntu-latest
+    needs: [validateVersion]
+    if: ${{ success() }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
